Add routes, controller, documentatio roles
